# drum-generator

./: .gitignore  README.md  pyproject.toml
docs/tutorials/: synthetic_training.md
scripts/: audition.py  gen_eval.py  listen.py  recon_eval.py
src/drum_generator/: __init__.py  codec.py  config.py  discriminator.py  dit.py  generate.py  train.py  vae.py
src/drum_generator/dataset/: __init__.py  augment.py  cache.py  caption.py  disk.py  freesound.py  memmap.py  synthetic.py
