[project]
name = "drum-generator"
version = "0.1.0"
description = "Text-conditioned drum one-shot generator using DiT + Flow Matching + VAE"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "transformers>=5.0.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "requests>=2.31.0",
    "descript-audio-codec>=1.0.0",
    "torchcodec>=0.11.0",
    "auraloss>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
]

[project.scripts]
drum-train = "drum_generator.train:main"
drum-generate = "drum_generator.generate:main"
drum-download = "drum_generator.dataset:cli_download"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drum_generator"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
